# lastfm-rs

./: .env.sample  .markdownlint.json  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  README.md  rustfmt.toml
examples/: artist_events.rs  artist_info.rs  artist_search.rs  search_artists.rs
src/: artist.rs  error.rs  event.rs  image.rs  image_collection.rs  lastfm.rs  lib.rs  location.rs  macros.rs  search_results.rs  user.rs  util.rs  utilities.rs  venue.rs
src/model/: custom_deserialization.rs  mod.rs
src/track/: mod.rs  similar.rs
src/user/: loved_tracks.rs  mod.rs  recent_tracks.rs  top_artists.rs  top_tracks.rs  user_info.rs
tests/: deserialize.rs  test_artist_events.rs  test_artist_info.rs  test_search_artists.rs  tests.rs
tests/resources/: user.getInfo.json  user.getLovedTracks.json  user.getRecentTracks.json  user.getTopArtists.json  user.getTopTracks.json
