[package]
name            = "lastfm-rs"
version         = "0.5.0"
authors         = ["Kamran Mackey <kamranm1200@gmail.com>"]
readme          = "README.md"
license         = "MIT"
description     = "A friendly Rust library for working with the Last.fm API."
repository      = "https://github.com/KamranMackey/lastfm-rs"
keywords        = ["lastfm", "web", "api"]
categories      = ["api-bindings"]
edition         = "2018"

[lib]
name            = "lastfm_rs"
path            = "src/lib.rs"

[dependencies]
chrono          = { version = "0.4.19", features = ["serde"] }
serde           = { version = "1.0.125", features = ["derive"] }
serde_json      = "1.0.64"
reqwest         = { version = "0.11.2", features = ["json"] }
url             = "2.2.1"
void            = "1.0.2"
