[package]
name            = "lastfm-rs"
version         = "0.6.0"
authors         = ["Evelyn Marie"]
readme          = "README.md"
license         = "MIT"
description     = "A friendly Rust library for working with the Last.fm API."
repository      = "https://github.com/evelynmarie/lastfm-rs"
keywords        = ["lastfm", "web", "api"]
categories      = ["api-bindings"]
edition         = "2021"

[lib]
name            = "lastfm_rs"
path            = "src/lib.rs"

[dependencies]
chrono          = { version = "0.4.22", features = ["serde"] }
serde           = { version = "1.0.145", features = ["derive"] }
serde_json      = "1.0.86"
reqwest         = { version = "0.11.12", features = ["json"] }
url             = "2.3.1"
void            = "1.0.2"
