[package]
name            = "lastfm-rs"
version         = "0.6.0"
authors         = ["Evelyn Marie"]
readme          = "README.md"
license         = "MIT"
description     = "A friendly Rust library for working with the Last.fm API."
repository      = "https://github.com/evelynmarie/lastfm-rs"
keywords        = ["lastfm", "web", "api"]
categories      = ["api-bindings"]
edition         = "2021"

[lib]
name            = "lastfm_rs"
path            = "src/lib.rs"

[dependencies]
chrono          = { version = "0.4.38", features = ["serde"] }
serde           = { version = "1.0.203", features = ["derive"] }
serde_json      = "1.0.117"
reqwest         = { version = "0.12.5", features = ["json"] }
url             = "2.5.2"
void            = "1.0.2"
